# ImpyTestA

./: .gitignore  .gitmodules  CMakeLists.txt  ImpyTestA.sln  vcpkg.json
ImpyTestA/: AudioPlayer.h  Bot.cpp  Bot.h  ImpyTestA.vcxproj  ImpyTestA.vcxproj.filters  SQLConnector.h  SlashCommandHandler.h
cmake/: FindMySQL.cmake
include/: Utils.h  dotenv.h
src/: Bot.cpp  main.cpp
